--- a/css/basic.css
+++ b/css/basic.css
@@ -14,6 +14,14 @@ body {
     background-color: #105644;
 }
 
+.bonus{
+    position: absolute;
+    left: 5%;
+    bottom: 5%;
+    font-size: 2vh;
+    transform: rotate(90deg);
+}
+
 .info {
     position: absolute;
     left: 5%;
@@ -183,4 +191,45 @@ div {
         opacity: 0;
         transform: scale3d(0, 0, 0);
     }
+}
+
+
+.button {
+    display: inline-block;
+    zoom: 1; /* zoom and *display = ie7 hack for display:inline-block */
+    *display: inline;
+    vertical-align: baseline;
+    margin: 0 2px;
+    outline: none;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    font: 1.5vh/100% Arial, Helvetica, sans-serif;
+    padding: .5em 2em .55em;
+    text-shadow: 0 1px 1px rgba(0,0,0,.3);
+    -webkit-border-radius: .5em; 
+    -moz-border-radius: .5em;
+    border-radius: .5em;
+    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2);
+    -moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);
+    box-shadow: 0 1px 2px rgba(0,0,0,.2);
+   }
+
+
+
+  
+/* green */
+.green {
+ color: #e8f0de;
+ border: solid 1px #538312;
+ background: #64991e;
+ background: -webkit-gradient(linear, left top, left bottom, from(#7db72f), to(#4e7d0e));
+ background: -moz-linear-gradient(top,  #7db72f,  #4e7d0e);
+ filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#7db72f', endColorstr='#4e7d0e');
+}
+.green:hover {
+ background: #538018;
+ background: -webkit-gradient(linear, left top, left bottom, from(#6b9d28), to(#436b0c));
+ background: -moz-linear-gradient(top,  #6b9d28,  #436b0c);
+ filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#6b9d28', endColorstr='#436b0c');
 }
